@startuml ClassDiagram

class Education {
    EducationID : integer
    Title : string
    EducationType : EduType
    Duration : integer
    Semesters : Semester List
}

class Schedule{
    Classes : Class List
    Date : datetime
    proposeSchedule()
    createSchedule()
    updateSchedule()
    viewSchedule()
}

class Location{
    Address : Address
    RoomID : RID
    LocationType : LocType
    Capacity : integer
}

class Course{
    Schedule : Schedule
    ECTS : float
    CourseID : CID
    StudentList : Student[]
    Teacher : Teacher
    Location : Location
}

class Class{
    Time : datetime
    ClassLocation : Location
    ClassType : CType
    Teachers : Teacher List
    EnrolledStudents : Student List
    setLocation()
    setClassType()
}

class Login{
    LoginType : LogType
    UserType : UType
    authenticate()
}

class User{
    Name : String
    PersonalInfo : PInfo
    ContactInfo : CInfo
    Role : RType
}

class Semester{
    Courses : Course List
    StartDate : datetime
}

class Student{
    Enrollment : Education
    viewSchedule()
}

class Teacher{
    CourseAffiliations : Course List
    proposeSchedule()
}

class Admin{
    inputInfo()
}

class TimeFrame{
    StartTime : datetime
    EndTime : datetime
    updateTimeFrame()
    deleteTimeFrame()
}

class CourseSecretary{
    createSchedule()
}

User"1" o-- "1" Schedule : has a
Course"1" o-- "1" Schedule : has a
Student"1" o-- "1" Schedule : has a
Teacher"1" o-- "1" Schedule : has a

Education"1" *-- "4..6" Semester : contains

Class "1" o-- "1..*"Location : has a

User <|-- Student : inherits
User <|-- Teacher : inherits
User <|-- Admin : inherits
User <|-- CourseSecretary : inherits

Semester"1" *-- "1..*" Course : contains
Schedule"1" *-- "0..*" Class : contains
Schedule"1" *-- "0..*" TimeFrame : contains
Teacher"1..*" o-- "1..*" Course : teaches
Student"1" o-- "1" Education : enrolled in

Login "1" -- "1" User : login

@enduml

